etc/ufw/user6.rules
*filter
:ufw6-user-input - [0:0]
:ufw6-user-output - [0:0]
:ufw6-user-forward - [0:0]
:ufw6-before-logging-input - [0:0]
:ufw6-before-logging-output - [0:0]
:ufw6-before-logging-forward - [0:0]
:ufw6-user-logging-input - [0:0]
:ufw6-user-logging-output - [0:0]
:ufw6-user-logging-forward - [0:0]
:ufw6-after-logging-input - [0:0]
:ufw6-after-logging-output - [0:0]
:ufw6-after-logging-forward - [0:0]
:ufw6-logging-deny - [0:0]
:ufw6-logging-allow - [0:0]
:ufw6-user-limit - [0:0]
:ufw6-user-limit-accept - [0:0]
### RULES ###

### tuple ### allow any 51413 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 51413 -j ACCEPT
-A ufw6-user-input -p udp --dport 51413 -j ACCEPT

### END RULES ###

### LOGGING ###
-A ufw6-after-logging-input -j LOG --log-prefix "[UFW ALLOW] "
-A ufw6-after-logging-output -j LOG --log-prefix "[UFW ALLOW] "
-A ufw6-after-logging-forward -j LOG --log-prefix "[UFW ALLOW] "
-A ufw6-logging-deny -m conntrack --ctstate INVALID -j LOG --log-prefix "[UFW AUDIT INVALID] "
-A ufw6-logging-deny -j LOG --log-prefix "[UFW BLOCK] "
-A ufw6-logging-allow -j LOG --log-prefix "[UFW ALLOW] "
-I ufw6-before-logging-input -j LOG --log-prefix "[UFW AUDIT] "
-I ufw6-before-logging-output -j LOG --log-prefix "[UFW AUDIT] "
-I ufw6-before-logging-forward -j LOG --log-prefix "[UFW AUDIT] "
### END LOGGING ###

### RATE LIMITING ###
-A ufw6-user-limit -m limit --limit 3/minute -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw6-user-limit -j REJECT
-A ufw6-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
